--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,16 @@ h2{
     color: #575ed8;
 }
 
-#mario-chat{
+.mario-chat{
+    max-width: 600px;
+    margin: 30px auto;
+    border: 1px solid #ddd;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
+    border-color: #575ed8;
+}
+
+.room{
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
@@ -16,7 +25,7 @@ h2{
     border-radius: 2px;
 }
 
-#chat-window{
+.chat-window{
     height: 400px;
     overflow: auto;
     background: #f9f9f9;
@@ -48,11 +57,11 @@ label{
 input{
     padding: 10px 20px;
     box-sizing: border-box;
-    background: #eee;
+    /* background: #aaa */
     border: 0;
     display: block;
     width: 100%;
-    background: #fff;
+    background: rgb(245, 241, 241);
     border-bottom: 1px solid #eee;
     font-family: Nunito;
     font-size: 16px;
